--- a/app/templates/web_test.html
+++ b/app/templates/web_test.html
@@ -1,7 +1,7 @@
 <html>
 
-    {% comment %} 웹 프론트엔드의 영역 {% endcomment %}
-    
+    <!-- 웹 프론트엔드의 영역 -->
+
     <head>
         <title>HTML문서 불러내기</title>
     </head>
